// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button with type \`a\` should render a <a> 1`] = `
<a
  className="undefined"
/>
`;

exports[`Button with type \`button\` should render a <button> 1`] = `
<button
  className="undefined"
  type="button"
/>
`;

exports[`Button with type \`label\` should render a <label> 1`] = `
<label
  className="undefined"
/>
`;

exports[`Button with type \`link\` should render a <Link> 1`] = `
<Link
  className="undefined"
  replace={false}
  to="href"
/>
`;

exports[`Button without type should render a <button> 1`] = `
<div
  className="undefined"
/>
`;
